v1.4.3 2010-01-08 Jochen Rau <jochen.rau@typoplanet.de>

	[+BUGFIX] Replaced deprecated mysql_list_tables().

v1.4.2 2009-12-08 Jochen Rau <jochen.rau@typoplanet.de>

	[~CONFIGURATION] You do not have to specify the root template page id in the extension configuration anymore.

v1.4.1 2009-11-16 Jochen Rau <jochen.rau@typoplanet.de>

	[-FEATURE] Removed experimental RTE integration.
	[+BUGFIX] Added missing option "showRange" to pagebrowser.
	[+FEATURE] You can now pass additional table tag params (pagebrowser.tableParams= class="foo"). This is only active if you don't overwrite the wraps.
	[+FEATURE] You can now specify, if the "prev." link should always be shown (pagebrowser.alwaysPrev = 1).
	
v1.4.0 2009-10-01 Jochen Rau <jochen.rau@typoplanet.de>

	[~TASK] Deployed version 1.4.0 to TER. Tagged version 1.4.0.

v1.3.2 2009-10-01 Jochen Rau <jochen.rau@typoplanet.de>

	[!!!][+FEATURE] Added configuration option plugin.tx_contagged.pagebrowser.wraps to define wraps for the pagebrowser (passed to piBase). Switched from tables to divs. Please check the styling of your output!
	[+BUGFIX] Added Icon for hidden terms. Thanks to Matthias Koch.
	
v1.3.1 2009-09-22 Jochen Rau <jochen.rau@typoplanet.de>

	[!!!][+FEATURE] Content of tables, uploads, captions, and html-cObj are now parsed, too. Please check, if this is the expected behaviour for your site. Comment out the appropriate lines in the setup if necessary.
	[!!!][+FEATURE] Contagged is now self-aware. The long description of a term is now parsed by contagged again. This enables auto-cross-referencing. Don't forget to include the glossary page (or exclude it, if you don't want the description to be parsed).
	[+BUGFIX] Set type of maxRecurrences now to integer to make it editable in the Constants Editor.
	[+BUGFIX] Fixed a problem with empty SELECT results.

v1.3.0 2009-09-16 Jochen Rau <jochen.rau@typoplanet.de>
